# vessel-express-napari

./: .bumpversion.cfg  .project  LICENSE  README.md  mkdocs.yml  quick_start.md  setup.cfg  tox.ini
.github/workflows/: build_and_deploy.yml  test_and_deploy.yml  test_build.yml
docs/: index.md
images/: Thumbs.db
src/: call_cleaning.py  call_closing.py  call_hole_removal.py  call_isotropic.py  call_merge.py  call_skeleton.py  call_smoothing.py  call_thinning.py  call_threshold.py  call_vesselness.py  pytest.ini
src/vessel_express/: __init__.py  _dock_widget.py  _dock_widget.py - Verknüpfung.lnk  _reader.py  napari.yaml  utils.py
src/vessel_express/_tests/: test_dock_widget.py  test_reader.bak  test_reader.py  test_v_express.py  test_vessel_express.py
src/vessel_express/_tests/images/: Binary_liver_1.tiff  Raw_liver_1.tiff  Thumbs.db  cleaning.npy  closing.npy  merge_2layers.npy  merge_3layers.npy  skeleton.npy  smoothed_Image.tif  smoothing.npy  thinning.npy  threshold.npy  threshold_2.0.tif  ves_li.npy  ves_otsu.npy  ves_triangle.npy
