[bumpversion]
current_version = 0.0.5
commit = True
tag = True

[bumpversion:file:src/vessel_express/__init__.py]
search = {current_version}
replace = {new_version}

[metadata]
name = vessel-express
author = Lennart Kowitz
author_email = lennart.kowitz@isas.de
url = https://github.com/MMV-Lab/vessel-express
license = BSD-3-Clause
description = A simple plugin for 3D vessel segmentation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/MMV-Lab/vessel-express-napari/issues
	Documentation = https://github.com/MMV-Lab/vessel-express-napari#README.md
	Source Code = https://github.com/MMV-Lab/vessel-express-napari
	User Support = https://github.com/MMV-Lab/vessel-express-napari/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
	itk
	scikit-image
	aicssegmentation

[options.packages.find]
where = src

[options.entry_points]
napari.plugin = 
	vessel-express = vessel_express
