[metadata]
name = vessel-express-napari
version = 0.0.8
author = Lennart Kowitz
author_email = lennart.kowitz@isas.de
url = https://github.com/MMV-Lab/vessel-express-napari
license = BSD-3-Clause
description = A simple plugin for 3D vessel segmentation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/MMV-Lab/vessel-express-napari/issues
	Documentation = https://github.com/MMV-Lab/vessel-express-napari#README.md
	Source Code = https://github.com/MMV-Lab/vessel-express-napari
	User Support = https://github.com/MMV-Lab/vessel-express-napari/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
install_requires = 
	napari-plugin-engine>=0.1.4
	npe2
	numpy
	itk
	scikit-image
	aicssegmentation
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	vessel-express-napari = vessel_express:napari.yaml

[options.package_data]
vessel_express = napari.yaml

